Make .web UTI "WebP image" instead of "WebP Image".
Rename libwebp.a to libweb-static.a to avoid conflicts with installed
dynamic libwebp.dylib.

--- a/Info.plist
+++ b/Info.plist
@@ -73,7 +73,7 @@
 				<string>public.image</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>WebP Image</string>
+			<string>WebP image</string>
 			<key>UTTypeIdentifier</key>
 			<string>com.google.webp</string>
 			<key>UTTypeReferenceURL</key>
